--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
     "express": "^4.13.4",
-    "md5": "^2.1.0"
+    "md5": "^2.1.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.19.4"
   }
 }
